// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Side bar component should render with default props 1`] = `
<div
  class="tabs"
>
  <ul>
    <li>
      <a
        class="tab tab__active"
        href="/undefined/?activeTab=DOCUMENTS"
      >
        Documents
      </a>
    </li>
  </ul>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full"
    >
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
      >
        Manage Documents
      </a>
    </div>
  </div>
</div>
`;

exports[`Side bar component should render with supplied tabs 1`] = `
<div
  class="tabs"
>
  <ul>
    <li>
      <a
        class="tab tab__active"
        href="/undefined/?activeTab=DOCUMENTS"
      >
        Documents
      </a>
    </li>
    <li>
      <a
        class="tab"
        href="/undefined/?activeTab=SUMMARY"
      >
        Summary
      </a>
    </li>
    <li>
      <a
        class="tab"
        href="/undefined/?activeTab=FOI_ACTIONS"
      >
        Actions
      </a>
    </li>
    <li>
      <a
        class="tab"
        href="/undefined/?activeTab=EX_GRATIA"
      >
        Ex-Gratia
      </a>
    </li>
  </ul>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-full"
    >
      <a
        class="govuk-body govuk-link"
        href="/case/some_case_id/stage/some_stage_id/entity/document/manage"
      >
        Manage Documents
      </a>
    </div>
  </div>
</div>
`;
